# RPGHelperBot

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.template.json
src/: config template.json  config.rs  cp2020_functions.rs  dbinterface.rs  dice_command.rs  dice_commands.rs  main.rs
src/cp2020/: add.rs  common.rs  init.rs  mod.rs  pick_char.rs  skill.rs
