[package]
name = "rpg-helper-bot"
authors = ["Eric McKeeth <eldin00@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.25", features = ["macros"]}
serenity = { default-features = false, features = ["client","gateway","model","rustls_backend"], version = "0.9.4" }
