[package]
name = "rpg-helper-bot"
authors = ["Eric McKeeth <eldin00@gmail.com>"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20", features = ["macros", "rt-multi-thread"]}
serenity = { default-features = false, features = ["client","gateway","model","rustls_backend", "framework", "standard_framework"], version = "0.11" }
lazy_static = "1.4"
regex = "1.6"
rand = "0.8"